delete obsolete data in db
